# ben-bot

./: .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  IMPLEMENTATION.md  INSTALLATION.md  MANIFEST.in  Makefile  README.md  cookies.txt  current_nautobot_config.py  nautobot_config_update.py  pyproject.toml  pyproject_black.toml  test_persistence.html  tox.ini  updated_nautobot_config.py
nautobot_chatbot/: __init__.py  apps.py  chatbot.py  middleware.py  models.py  navigation.py  template_content.py  urls.py  views.py
nautobot_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nautobot_chatbot/ai/: __init__.py  config.py  engine.py  llm_client.py
nautobot_chatbot/ai/mcp/: __init__.py  api_client.py  tools.py
nautobot_chatbot/ai/rag/: __init__.py  embeddings.py  retriever.py  vectorstore.py
nautobot_chatbot/static/nautobot_chatbot/css/: chatbot.css
nautobot_chatbot/static/nautobot_chatbot/js/: chatbot.js
nautobot_chatbot/templates/nautobot_chatbot/: base.html  chat.html  chatbot_overlay.html
tests/: test_chatbot.py
